Changes: 1. Default protractor.config 2. Added debugger via alcz-protractor-runner 3. Created test cases in specs with jasmine-data-provider 4. Debugger for vs code added 5. gitignore to include alcz-protractor-runner

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "postinstall": "node node_modules/protractor/bin/webdriver-manager update"
   },
   "dependencies": {
+    "alcz-protractor-runner": "*",
+    "grunt": "*",
     "jasmine-data-provider": "^2.2.0",
     "jasmine-spec-reporter": "^2.4.0",
     "protractor": "*",
-    "selenium-webdriver": "*",
-    "grunt": "*",
-    "grunt-protractor-runner": "*"
+    "selenium-webdriver": "*"
   },
   "author": "Rajat Kumar",
   "license": "ISC"
